# iced-text-editor

./: Cargo.toml
src/: main.rs
