[package]
name = "iced-text-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = ["fs"] }

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "refs/tags/text-editor"
features = ["debug"]
